@@ -2,6 +2,9 @@ package com.iamrutra.post_service.mapper;
 
 import com.iamrutra.post_service.model.LikeResponse;
 import com.iamrutra.post_service.model.Like;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -9,13 +12,16 @@ import java.util.stream.Collectors;
 
 @Component
 public class LikeMapper {
-    public List<LikeResponse> mapToListLikeResponse(List<Like> likes) {
-        return likes.stream().map(like -> {
+
+    public Page<LikeResponse> mapToListLikeResponse(Page<Like> likes, Pageable pageable) {
+        List<LikeResponse> likeResponses = likes.stream().map(like -> {
             return LikeResponse.builder()
                     .id(like.getId())
                     .postId(like.getPost().getId())
                     .userId(like.getUserId())
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
+
+        return new PageImpl<>(likeResponses, pageable, likes.getTotalElements());
     }
 }
